bug fixes et comparaison d'équipes

--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -1,45 +1,53 @@
 <div class="container">
-<!-- body start-->
-    <div class="row"></div>   
-    
+    <!-- body start-->
+    <div class="row"></div>
+
     <!-- header start tablet and sup-->
     <div class="row white hide-on-small-only">
         <div class="col s1 blue-grey-text text-darken-2 left-align">
             <i class="material-icons md-48">group</i>
         </div>
 
-        <div class="col s10 left-align">
+        <div class="col s9 left-align">
             <h5 class="blue-grey-text text-darken-2">{{'mainTeam.title' | translate }} {{currentEffective.label}}</h5>
         </div>
-        
-        <div class="col s1 center-align">
+
+        <div class="col s2 center-align">
             <a href="#/private/addTeam/{{false}}" class="red-text text-lighten-1">
                 <i class="material-icons md-48">group_add</i>&nbsp;
+            </a>
+            <a ng-click="compare()" class="red-text text-lighten-1"
+               href="" title="{{'mainEffective.buttons.compare' | translate}}">
+                <i class="material-icons md-48">recent_actors</i>&nbsp;
             </a>
         </div>
     </div>
     <!-- header end -->
-    
+
     <!-- header start smartphone-->
     <div class="row white hide-on-med-and-up">
 
         <div class="col s12 left-align">
             <h5 class="blue-grey-text text-darken-2">{{'mainTeam.title' | translate }} {{currentEffective.label}}</h5>
         </div>
-        
+
         <div class="col s12 center-align">
             <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
                 <a href="#/private/addTeam/{{false}}" class="btn-floating btn-large red lighten-1">
                     <i class="material-icons md-24">group_add</i>&nbsp;
                 </a>
             </div>
+            <div class="fixed-action-btn" style="bottom: 45px; right: 94px;">
+                <button ng-click="compare()" class="btn-floating btn-large red lighten-1">
+                    <i class="material-icons md-24">recent_actors</i>
+                </button>
+            </div>
         </div>
     </div>
     <!-- header end -->
-        
+
     <div class="row">
 
-        
 
         <!-- filter -->
         <div class="col s12">
@@ -48,35 +56,48 @@
                 <label for="queryTeam">Filter</label>
             </form>
         </div>
-        <div class="col s12">&nbsp;</div>   
-        <!-- List team --> 
+        <div class="col s12">&nbsp;</div>
+        <!-- List team -->
         <ul>
             <li class="col l3 m6 s12" ng-repeat="team in listTeamHome | filter:queryTeam">
                 <!-- enable -->
                 <div class="card white blue-grey-text text-darken-2" ng-show="team.enable===true">
                     <div class="card-content colorMain white-text center">
-                        <h5><small>{{team.label}}</small></h5>
+                        <h5>
+                            <small>{{team.label}}</small>
+                        </h5>
                     </div>
-                    
                     <div class="card-action">
-                        <a href="#/private/updateTeam/{{team._id}}/false" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a>
-                        <a href="#/private/teamStats/{{team._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                        <input type="checkbox" ng-model="compareList[team._id]" name="compare"
+                               ng-change="updateTeamToCompare(team._id)"
+                               ng-checked="compareList[team._id]" id="compare1-{{team._id}}"/>
+                        <label for="compare1-{{team._id}}"></label>
+                        <a href="#/private/updateTeam/{{team._id}}/false" class="red-text text-lighten-1"><i
+                                class="material-icons">mode_edit</i></a>
+                        <a href="#/private/teamStats/{{team._id}}" class="red-text text-lighten-1"><i
+                                class="fa fa-bar-chart fa-2x"></i></a>
                     </div>
                 </div>
                 <!-- disable -->
                 <div class="card white blue-grey-text text-darken-2" ng-show="team.enable===false">
                     <div class="card-content grey lighten-2 grey-text text-darken-2 center">
-                        <h5><small>{{team.label}}</small></h5>
+                        <h5>
+                            <small>{{team.label}} sdqsd</small>
+                        </h5>
                     </div>
-                    
                     <div class="card-action">
-                        <a href="#/private/updateTeam/{{team._id}}/false" class="red-text text-lighten-1"><i class="material-icons">mode_edit</i></a>
-                        <a href="#/private/teamStats/{{team._id}}" class="red-text text-lighten-1"><i class="fa fa-bar-chart fa-2x" ></i></a>
+                        <input type="checkbox" ng-model="compareList[team._id]" name="compare"
+                               ng-change="updateTeamToCompare(team._id)"
+                               ng-checked="compareList[team._id]" id="compare-{{team._id}}"/>
+                        <label for="compare-{{team._id}}"></label>
+                        <a href="#/private/updateTeam/{{team._id}}/false" class="red-text text-lighten-1"><i
+                                class="material-icons">mode_edit</i></a>
+                        <a href="#/private/teamStats/{{team._id}}" class="red-text text-lighten-1"><i
+                                class="fa fa-bar-chart fa-2x"></i></a>
                     </div>
                 </div>
             </li>
         </ul>
     </div>
-    
-<!-- body end-->
+    <!-- body end-->
 </div>
