--- a/src/app/components/directives/agenda/eventCard.html
+++ b/src/app/components/directives/agenda/eventCard.html
@@ -5,14 +5,24 @@
             <span class="left"><i class="material-icons">{{icon}}</i></span>
             <span>{{title | translate }}</span>
             <span class="right" ng-hide="isCollected">
-                <a href="#/private/updateEvent/{{event._id}}" class="{{textColor2}} waves-effect waves-light"><i class="material-icons">mode_edit</i></a>
+                <a href="#/private/updateEvent/{{event._id}}" class="{{textColor2}} waves-effect waves-light"><i
+                        class="material-icons">mode_edit</i></a>
             </span>
             <span class="right" ng-show="isCollected">
-                <a href="#/private/eventStats/{{collectId}}" class="{{textColor2}} waves-effect waves-light"><i class="fa fa-bar-chart"></i></a>
+                <a href="#/private/eventStats/{{collectId}}" class="{{textColor2}} waves-effect waves-light"><i
+                        class="fa fa-bar-chart"></i></a>
+                <span ng-if="hasCompare">&nbsp;
+                    <input type="checkbox" ng-model="compareList[event._id]" name="compare"
+                           ng-change="updateEventToCompare(event._id)"
+                           ng-checked="compareList[event._id]" id="compare-{{event._id}}"/>
+                    <label for="compare-{{event._id}}"></label>
+                </span>
             </span>
         </h5>
 
-        <div class="card-content">&nbsp; {{event.participants.teamHome.label}} <br/> &nbsp; {{event.participants.teamVisitor.label}}</div>
+        <div class="card-content">&nbsp; {{event.participants.teamHome.label}} <br/> &nbsp;
+            {{event.participants.teamVisitor.label}}
+        </div>
         <div class="card-content">{{event.startDate}}
             <a ng-show="mapShow" class="waves-effect waves-light {{textColor1}} right" ng-click="openMap()">
                 <i class="material-icons">location_on</i>
@@ -25,12 +35,14 @@
 <!-- Modal map Player -->
 <div ng-attr-id="modalEvent-{{event._id}}" class="modal modal-fixed-footer">
     <div class="modal-content">
-        <div class="blue-grey-text text-darken-2"><i class="material-icons">location_on</i> {{event.address.formatedAddress}}</div>
+        <div class="blue-grey-text text-darken-2"><i class="material-icons">location_on</i>
+            {{event.address.formatedAddress}}
+        </div>
         <br>
         <div ng-attr-id="mapEvent-{{event._id}}" style="width:100%;height:90%;"></div>
     </div>
     <div class="modal-footer">
-      <a href="" class="modal-action modal-close waves-effect waves-light btn red"
-                   translate="commons.buttons.close"></a>
+        <a href="" class="modal-action modal-close waves-effect waves-light btn red"
+           translate="commons.buttons.close"></a>
     </div>
 </div>
