--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -1,48 +1,57 @@
 <div class="container">
-<!-- body start-->
+    <!-- body start-->
     <div class="row"></div>
- 
+
     <!-- entete start tablet and sup-->
     <div class="row colorMain hide-on-small-only white-text">
         <div class="col s1 left-align">
             <h5><i class="material-icons md-36">event</i></h5>
         </div>
 
-        <div class="col s10 center-align">
-            <h5 >{{'mainAgenda.title' | translate }}  {{currentEffective.label}}</h5>
+        <div class="col s9 center-align">
+            <h5>{{'mainAgenda.title' | translate }} {{currentEffective.label}}</h5>
         </div>
-        
-        <div class="col s1 center-align">
+
+        <div class="col s2 center-align">
             <h5>
                 <a href="#/private/addEvent/{{effectiveId}}">
                     <i class="material-icons md-36 white-text">add</i>
                 </a>
+                <a ng-click="compare()" class="white-text text-lighten-1"
+                   href="" title="{{'mainEffective.buttons.compare' | translate}}">
+                    <i class="material-icons md-36">recent_actors</i>&nbsp;
+                </a>
             </h5>
         </div>
-        
+
         <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
     </div>
     <!-- entete end -->
-    
+
     <!-- entete start smartphone-->
     <div class="row colorMain hide-on-med-and-up white-text">
 
         <div class="col s12 center-align">
-            <h5>{{'mainAgenda.title' | translate }}  {{currentEffective.label}}</h5>
+            <h5>{{'mainAgenda.title' | translate }} {{currentEffective.label}}</h5>
         </div>
-        
+
         <div class="col s12 center-align">
             <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
                 <a href="#/private/addEvent/{{effectiveId}}" class="btn-floating btn-large red lighten-1">
                     <i class="material-icons md-24 white-text">add</i>
                 </a>
             </div>
+            <div class="fixed-action-btn" style="bottom: 45px; right: 94px;">
+                <button ng-click="compare()" class="btn-floating btn-large red lighten-1">
+                    <i class="material-icons md-24 white-text">recent_actors</i>
+                </button>
+            </div>
         </div>
-        
+
         <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
     </div>
     <!-- entete end -->
-    
+
     <!-- entete 
      <div class="row">
         <div class="col s12"> 
@@ -81,37 +90,37 @@
         </div>
     </div>
     <!-- entete end -->
-    
+
     <div class="row center">
-        
-    <!-- filter -->
+
+        <!-- filter -->
         <form class="forms forms-inline input-field">
             <input type="text" id="query" class="grey lighten-4" ng-model="query">
             <label for="query">Filter</label>
         </form>
     </div>
-    
-    <div class="row" ng-if="events.length > 0">      
-        <ul>                
+
+    <div class="row" ng-if="events.length > 0">
+        <ul>
             <li class="col s12 m6 l4" ng-repeat="currentEvent in events | filter:query">
-                <event-card event="currentEvent"></event-card>
+                <event-card event="currentEvent" has-compare="true"></event-card>
             </li>
         </ul>
     </div>
-    
+
     <div class="row" ng-show="events.length === 0">
         <div class="col s12">
-            <div class="card">                        
+            <div class="card">
                 <div class="row center">
                     <a href="#/private/addEvent/{{effectiveId}}" class="blue-grey-text text-darken-1">
-                        <i class="fa fa-plus-square-o fa-5x"></i> 
+                        <i class="fa fa-plus-square-o fa-5x"></i>
                         <h3>{{'mainAgenda.buttons.addEvent' | translate }}</h3>
                     </a>
                 </div>
             </div>
         </div>
-            
+
     </div>
-    
-<!-- body end-->
+
+    <!-- body end-->
 </div>
