--- a/src/app/components/directives/stats/hand/radarChart.html
+++ b/src/app/components/directives/stats/hand/radarChart.html
@@ -1,5 +1,5 @@
 <div class="card blue-grey darken-2">
-    <div class="card-title cardStatTitle activator center white-text title">
+    <div class="card-title colorMain activator center white-text title">
         <small>{{title}}<i class="small material-icons right">more_vert</i></small>
     </div>
     <div class="card-content white center-align">
