--- a/src/app/modules/sandbox/stats/player/playerStats.html
+++ b/src/app/modules/sandbox/stats/player/playerStats.html
@@ -89,14 +89,41 @@
                 </div>
             </div>
             <!-- Stats shoot efficiency end -->
-            
-            <!-- Stats actions pos/neg Start -->
-            <div class="row"> 
+            <div class="row">
                 <div class="col s12 left-align grey-text text-ligthen-2">
                     <h5><small>{{'stats.actionTab.title' | translate }}</small></h5>
                 </div>
+                <div class="col s12 m6 l3">
+                        <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}" owners="playersIds" series="series"
+                                            start-date="periodicityActive.startDate" meta="meta"
+                                            end-date="periodicityActive.endDate"
+                                            indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
+                    </div>
+                    <div class="col s12 m6 l3">
+                        <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}" owners="playersIds" series="series"
+                                            start-date="periodicityActive.startDate" meta="meta"
+                                            end-date="periodicityActive.endDate"
+                                            indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
+                    </div>
+                    <div class="col s12 m6 l3">
+                        <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}" owners="playersIds" series="series"
+                                            start-date="periodicityActive.startDate" meta="meta"
+                                            end-date="periodicityActive.endDate"
+                                            indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
+                    </div>
+                    <div class="col s12 m6 l3">
+                        <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}" owners="playersIds" series="series"
+                                            start-date="periodicityActive.startDate" meta="meta"
+                                            end-date="periodicityActive.endDate"
+                                            indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
+                    </div>
+            </div>
+            <!-- Stats actions pos/neg Start 
+            <div class="row"> 
+                
                 <stats-actions-pos-neg></stats-actions-pos-neg>
             </div>
+            -->
             <!-- Stats actions pos/neg end -->
             
             <!-- Stats event's list Start -->
