--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -2,15 +2,21 @@
 
     <!-- space between header menu and body-->
     <div class="row"></div>
-
+    <div class="row">
+        <div class="col s12">
+            <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
+            <div dashboard="dashboardOptions" class="dashboard-container" template-url="app/components/directives/widgets/dashboard.html"></div>
+        </div>
+    </div>
     <!-- body start-->
     <div class="row">
         <div class="col s12">
             <!-- Collecte-->
             <div>
-                <h5 class="header red-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.stats' | translate }}</h5>
+                <h5 class="header red-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'dashboard.stats' |
+                    translate }}</h5>
             </div>
-            
+
             <ul>
                 <li class="col s12 m12 l6" ng-repeat="collecte in collectes">
                     <div class="card white">
@@ -18,10 +24,14 @@
                             <h5>{{collecte.eventRef.label}}</h5>
                         </div>
                         <div class="card-content white blue-grey-text text-darken-2 flow-text">
-                            <h5>{{collecte.eventRef.participants.teamHome.label}} - {{collecte.eventRef.participants.teamVisitor.label}}</h5>
-                            <hr class="white" />
-                            <span class="blue-grey-text text-lighten-3"><small>{{collecte.eventRef.startDate |  date : 'dd MMMM yyyy HH:mm'}}</small></span>
-                            <a href="#/private/eventStats/{{collecte._id}}" class="btn-floating waves-effect waves-light red lighten-1 right">
+                            <h5>{{collecte.eventRef.participants.teamHome.label}} -
+                                {{collecte.eventRef.participants.teamVisitor.label}}</h5>
+                            <hr class="white"/>
+                            <span class="blue-grey-text text-lighten-3"><small>{{collecte.eventRef.startDate | date :
+                                'dd MMMM yyyy HH:mm'}}
+                            </small></span>
+                            <a href="#/private/eventStats/{{collecte._id}}"
+                               class="btn-floating waves-effect waves-light red lighten-1 right">
                                 <i class="fa fa-bar-chart"></i>
                             </a>
                         </div>
@@ -31,25 +41,29 @@
         </div>
     </div>
     <div class="row">
-        <div class="col s12">      
-            <div><h5 class="header red-text text-lighten-1"><i class="fa fa-calendar left"></i>{{'dashboard.event' | translate }}</h5></div>
+        <div class="col s12">
+            <div><h5 class="header red-text text-lighten-1"><i class="fa fa-calendar left"></i>{{'dashboard.event' |
+                translate }}</h5></div>
             <!-- Event -->
             <div ng-if="events.length > 0">
                 <div>
                     <div class="card white">
                         <div class="card-content colorMain white-text flow-text">
                             <span class="card-title">{{currentEvent.participants.teamHome.label}} - {{currentEvent.participants.teamVisitor.label}}</span>
-                            <hr class="white" />
-                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate |  date : 'dd MMMM yyyy HH:mm'}}</h5>
+                            <hr class="white"/>
+                            <h5 class="small blue-grey-text text-lighten-3">{{currentEvent.startDate | date : 'dd MMMM yyyy HH:mm'}}</h5>
                             <h6>{{currentEvent.address.formatedAddress}}</h6>
                         </div>
                         <div class="card-action white">
-                            <a href='#/private/agenda/{{currentEffective._id}}' class="hide-on-med-and-down left waves-effect waves-light blue-grey-text text-darken-1">
+                            <a href='#/private/agenda/{{currentEffective._id}}'
+                               class="hide-on-med-and-down left waves-effect waves-light blue-grey-text text-darken-1">
                                 <i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}
                             </a>
-                            <a href="" ng-if="indexEvent < events.length -1" ng-click="nextEvent()" class="btn-floating colorMain right white-text">
+                            <a href="" ng-if="indexEvent < events.length -1" ng-click="nextEvent()"
+                               class="btn-floating colorMain right white-text">
                                 <i class="mdi-navigation-chevron-right right"></i></a>
-                            <a href="" ng-if="indexEvent > 0" ng-click="previousEvent()" class="btn-floating colorMain right white-text">
+                            <a href="" ng-if="indexEvent > 0" ng-click="previousEvent()"
+                               class="btn-floating colorMain right white-text">
                                 <i class="mdi-navigation-chevron-left left"></i></a>
                             <div>&nbsp;</div>
                         </div>
@@ -58,20 +72,20 @@
             </div>
             <div class="row" ng-if="events.length === 0">
                 <div class="col s12">
-                    <div class="card">                        
+                    <div class="card">
                         <div class="row center">
                             <a href="#/private/addEvent/{{currentEffective._id}}" class="blue-grey-text text-darken-1">
-                                <i class="fa fa-plus-square-o fa-3x"></i> 
+                                <i class="fa fa-plus-square-o fa-3x"></i>
                                 <h4>{{'mainAgenda.buttons.addEvent' | translate }}</h4>
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
-            
-            
+
+
         </div>
-        
+
     </div>
     <!-- body end-->
 </div>
