--- a/src/app/components/directives/widgets/agenda/agenda.html
+++ b/src/app/components/directives/widgets/agenda/agenda.html
@@ -1,13 +1,14 @@
 <div ng-repeat="e in events track by $index" class="row">
     <div class="col s2">
-        <h4 style="line-height: 0.5">{{e.startDate | date : "dd"}}</h4>
+        <h5 style="line-height: 0.5">{{e.startDate | date : "dd"}}</h5>
         <hr/>
-        <h5 style="line-height: 0.5">{{e.startDate | date : 'MM'}}</h5>
+        <h6 style="line-height: 0.5">{{e.startDate | date : 'MM'}}</h6>
     </div>
     <div class="col s10">
-        <h5>{{e.label}}
+        <h6>{{e.label}}
             <small>{{e.title | translate}}</small>
-        </h5>
-        <p>{{e.participants.teamHome.label}} / {{e.participants.teamVisitor.label}}</p>
+        </h6>
+        {{e.participants.teamHome.label}} / {{e.participants.teamVisitor.label}}
     </div>
+    <br />
 </div>
