--- a/src/app/index.css
+++ b/src/app/index.css
@@ -33,7 +33,7 @@
 
 .colorSecondary {
     background: linear-gradient(10deg, rgba(140, 190, 100, 1), rgba(102,187,106, 1));
-    overflow: hidden;
+  /*  overflow: hidden; */
 }
 
 .colorAccent {
@@ -760,4 +760,28 @@ table.super-fancy tr.foobar {
 .compare-modale canvas#line {
     width: 100% !important;
     height: 200px !important;
+}
+.notification.dropdown-content {
+    display: none;
+    min-width: 300px; /* Changed this to accomodate content width */
+    margin-left: -1px; /* Add this to keep dropdown in line with edge of navbar */
+    opacity: 0;
+    will-change: width, height;
+    top: 55px !important;
+    overflow: visible;
+    padding: 20px;
+}
+.notification:after {
+    content:'';
+    display:block;
+    position:absolute;
+    top:-20px; /*should be set to -border-width x 2 */
+    right:31px;
+    width:0;
+    text-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    height:0;
+    /*border color should be same as div div background color*/
+    border: 10px solid transparent;
+    border-bottom-color: white;
+
 }
